# last-fm-twitter

./: .gitignore  DEPLOY.md  README.md  build_lambda_layer.py  main.py  pyproject.toml  tasks.py  utils.py
scripts/: generate_expected_image.py
tests/: conftest.py  test_draw_ranking.py
tests/fixtures/: lastfm_toptracks.json
