[project]
name = "last-fm-twitter"
version = "0.1.0"
description = "Last.fm Twitter integration"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "pillow",
    "requests",
    "python-dotenv",
    "boto3-stubs~=1.42.53",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    "archives",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
